--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,9 @@
   </p>
   
   <p>
-    <%= link_to 'Sign Up', new_user_path, class: 'btn btn-primary btn-large' %>
+	<% unless signed_in? %>
+		<%= link_to 'Sign Up', new_user_path, class: 'btn btn-primary btn-large' %>
+	<% end %>
   </p>
 
 </div>
