--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,6 +10,16 @@
       </ul>
     </div>
   <% end %>
+  
+  <div class="field">
+    <% if @user.avatar_url %>
+        <%= image_tag(@user.avatar_url(:thumbnail)) %> <br/>
+        <%= f.check_box :remove_avatar %>
+        <%= f.label :remove_avatar %> <br/>
+    <% end %>
+    <%= f.file_field(:avatar) %>
+    <%= f.hidden_field(:avatar_cache) %>
+  </div>
 
   <div class="field">
     <%= f.label :name %><br />
