--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<p><%= image_tag @user.avatar_url(:standard) if @user.avatar_url %></p>
+
 <p>
   <b>Name:</b>
   <%= @user.name %>
